--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: 'Montserrat';
+    src: url('./Fonts/Montserrat-VariableFont_wght.ttf');
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -25,6 +31,16 @@ a {
     text-decoration: none;
 }
 
+h2 {
+    color: #FFF;
+    text-align: right;
+    font-family: "Montserrat";
+    font-size: 25.52px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+}
 
 .background_lines {
     width: 25vw;
