--- a/src/components/Elements/Pages/Pages.module.scss
+++ b/src/components/Elements/Pages/Pages.module.scss
@@ -2,7 +2,7 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    position: relative;
+    position: absolute;
     flex-shrink: 0;
     margin: 0;
     background: radial-gradient(circle, rgba(228, 222, 222, 0.7) 0%, #b0b0b0 100%);
@@ -13,7 +13,7 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    position: relative;
+    position: absolute;
     flex-shrink: 0;
     margin: 0;
     background: radial-gradient(circle, rgba(0, 0, 0, 0.7) 0%, #181818 100%);
@@ -119,4 +119,85 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+
+//NEWS
+
+.news_container {
+  width: 100%;
+  height: 100%;
+  padding-top: 100px;
+  display: flex;
+}
+
+.left_content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding-left: 50px;
+  h1 {
+    color: #131314;
+    font-family: "Montserrat";
+    font-size: 40.138px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+  }
+  
+  li{
+    display: flex;
+    align-items: center;
+    margin-right: 50px;
+    height: 120px;
+    position: relative;
+    svg{
+      position: absolute;
+      left: 0;
+      z-index: -2;
+      width: 100px;
+    }
+  }
+
+  p {
+    color: #000;
+    font-family: "Montserrat";
+    font-size: 30.488px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  
+  
+  span {
+    color: #383838;
+    font-family: "Montserrat";
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  img {
+    width: 154.85px;
+    margin-right: 30px;
+    max-width: 100%;
+    object-fit: contain;
+  }
+}
+
+.right_content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  .sneakers_up{
+    width: 100%;
+    height: 100%;
+    max-height: 50vh;
+  }
+  .sneakers_down{
+    width: 100%;
+    height: 100%;
+    max-height: 50vh;
+  }
 }
