--- a/src/components/Elements/Pages/Pages.module.scss
+++ b/src/components/Elements/Pages/Pages.module.scss
@@ -190,10 +190,33 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  position: relative;
   .sneakers_up{
     width: 100%;
     height: 100%;
     max-height: 50vh;
+    padding-bottom: 10px;
+    overflow: hidden;
+    position: relative;
+    img {
+      transform: scaleX(-1);
+      width: 480px;
+      object-fit: contain; 
+      position: absolute;
+      bottom: 0;
+      right: 30%;
+      z-index: 2;
+    }
+    .news_circle{
+      width: 270px;
+      height: 270px;
+      border-radius: 50%;
+      background-color: #E31F1F;
+      position: absolute;
+      top: 5px;
+      right: 30%;
+      z-index: 1;
+    }
   }
   .sneakers_down{
     width: 100%;
