--- a/src/components/Elements/Pages/Pages.module.scss
+++ b/src/components/Elements/Pages/Pages.module.scss
@@ -114,7 +114,7 @@
 .white_text { 
   color: #FFF;
   text-align: right;
-  font-family: Montserrat;
+  font-family: "Montserrat";
   font-size: 25.52px;
   font-style: normal;
   font-weight: 700;
@@ -222,5 +222,77 @@
     width: 100%;
     height: 100%;
     max-height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &_content {
+      height: 100%;
+      width: 480px;
+      .adidas_text{
+        color: #FFF;
+        font-family: 'Montserrat';
+        font-size: 46.661px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        text-transform: uppercase;
+        span{
+          color: #E31F1F;
+        }
+      }
+      .priceline{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        svg {
+          margin-right: 5px;
+          &:last-child{
+            margin-right: 0px;
+          }
+        }
+      }
+    }
+    .sizeline{
+      margin-bottom: 10px;
+    }
+    .btn_cards {
+      display: flex;
+      justify-content: center;
+      .btn{
+        background: rgba(128, 128, 128, 0.2);
+        color: #fff; 
+        padding: 10px 20px;
+        width: 45%;
+        border: none; 
+        border-radius: 20px;
+        cursor: pointer; 
+        transition: background 0.3s ease; 
+        margin-right: 15px;
+        &:last-child{
+          margin-right: 0;
+        }
+        &:hover{
+          background: rgba(128, 128, 128, 0.8);
+        }
+        p{
+          color: #FFF;
+          text-align: center;
+          font-family: 'Montserrat';
+          font-size: 36.139px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+          text-transform: uppercase;
+
+        }
+      }
+    }
+  }
+}
+
+.svg{
+  margin-right:15px;
+  &:last-child{
+    margin-right: 0;
   }
 }
